cleanup DoubleSubstitutionSolution.java